--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
 
           <div class="social-links">
             <a target="_blank" href="https://github.com/SophiaCG">
-              <i id="github-icon" class="fa-brands fa-square-github"></i>
+              <i title="GitHub" id="github-icon" class="fa-brands fa-square-github"></i>
             </a>
             <a
               target="_blank"
               href="https://www.linkedin.com/in/sophiagorgonio/"
             >
-              <i id="linkedin-icon" class="fa-brands fa-linkedin"></i>
+              <i title="LinkedIn" id="linkedin-icon" class="fa-brands fa-linkedin"></i>
             </a>
             <a target="_blank" href="resume.pdf">
-              <i id="download-icon" class="fa-solid fa-download"></i>
+              <i title="Download Resume" id="download-icon" class="fa-solid fa-download"></i>
             </a>
           </div>
         </div>
