Changed social links tags

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 
           <div class="social-links">
             <a target="_blank" href="https://github.com/SophiaCG">
-              <i title="GitHub" id="github-icon" class="fa-brands fa-square-github"></i>
+              <i title="https://github.com/SophiaCG" id="github-icon" class="fa-brands fa-square-github"></i>
             </a>
             <a
               target="_blank"
               href="https://www.linkedin.com/in/sophiagorgonio/"
             >
-              <i title="LinkedIn" id="linkedin-icon" class="fa-brands fa-linkedin"></i>
+              <i title="https://www.linkedin.com/in/sophiagorgonio/" id="linkedin-icon" class="fa-brands fa-linkedin"></i>
           </a>
             <div>
               <a target="_blank" href="resume.pdf">
