Added title to mail button

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </a>
 
           <a href="mailto:sophia.gorgonio@gmail.com" id="email-icon">
-            <i class="fa-solid fa-square-envelope"></i>
+            <i title="Send an email" class="fa-solid fa-square-envelope"></i>
           </a>    
 
             <div>
