--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </a>    
 
             <div>
-              <a target="_blank" href="web-resume.pdf">
+              <a target="_blank" href="Sophia-Gorgonio-Resume.pdf">
                 <i title="Download Resume" id="download-icon" class="fa-solid fa-download"></i>
               </a>  
               <p id="settings-note">
